## screencast
Interface to record a X11 desktop
Copyright 2015-2019 Daniel Bermond
https://github.com/dbermond/screencast/

### changelog

### version next
- added support for AOM AV1 video encoder
- new option: select tickness of the screen region border delimiter
- new option: select the X server display and screen
- fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
- tests: use less restrictive encoders
- tests: allow to run tests without audio input (AUDIOIN='none')
- tests: allow to run tests in a user defined X server display through the USEDISPLAY environment variable
- tests: allow to set the font for text watermark through the WMARK_FONT environment variable

### version 1.5.0 - 2018-01-05
- new feature: webcam overlay effect
- new feature: live streaming (tested only with YouTube)
- new feature: record in a one step process (record and encode at the same time)
- added support for VAAPI hardware accelerated video encoding with H.264, HEVC, VP8 and VP9
- added support for Intel QSV hardware accelerated video encoding with H.264 and HEVC
- added support for the container formats .mov .ogv .flv .nut .wmv .asf and .avi
- added support for VP9 encoder on MP4 cotainer format (needs FFmpeg 3.4 or newer - or git master)
- added support for Windows Media Audio and Video encoders (wma and wmv encoders)
- added support for FFmpeg builds that do not have ALSA enabled, like the Fedora build from the RPM Fusion repository
- added support for oxipng optimizer
- added support for bash-completion
- added video metadata information referencing the program
- added predefined special values for watermark and webcam position: topleft/tl, topright/tr, bottomleft/bl and bottomright/br
- added checks for all the needed FFmpeg encoders, decoders, muxers and demuxers to avoid failures
- added check  for the selected audio input name to avoid failures
- added tests
- faster VP9 encoding speed with software-based encoder (vp9)