@@ -179,7 +179,7 @@ Intel Media SDK to be installed.
 .nf
         default: x264
 supported types: x264, h264_nvenc, h264_vaapi, h264_qsv,
-                 x265, hevc_nvenc, hevc_vaapi, hevc_qsv, kvazaar,
+                 x265, kvazaar, svt_hevec, hevc_nvenc, hevc_vaapi, hevc_qsv
                  vp8, vp8_vaapi, vp9, vp9_vaapi, theora, wmv, aom_av1
 .fi
 .RE
