@@ -7,6 +7,7 @@ https://github.com/dbermond/screencast/
 
 ### version next
 - added support for AOM AV1 video encoder
+- added support for Intel SVT HEVC video encoder
 - new option: select tickness of the screen region border delimiter
 - new option: select the X server display and screen
 - fix: security issue with temporary directory (https://github.com/dbermond/screencast/issues/3)
